# mmd-two-sample-test-variable-selection

./: .gitignore  .travis.yml  Makefile  README.md  docker-compose.yaml  example.ipynb  pyproject.toml  pytest-algorithm-single.ini  pytest.ini  pytest_examples.ini
demos/demo_face_cat_dog/: README.md  make_interactive_html.py  run_assessment.py
docker_files/: Dockerfile_dask  Dockerfile_dev
examples/: config_example.toml  example_interface.py
examples/examples_sdk/: example_cv_detector.py  example_interpretable_mmd.py  example_mmd_estimator.py
mmd_tst_variable_detector/: __init__.py  exceptions.py  logger_unit.py
mmd_tst_variable_detector/assessment_helper/: data_generator.py  data_generator_brownian_motion.py  data_generator_timeseries.py  discretize_continuous_space.py
mmd_tst_variable_detector/baselines/: l2_distance_detector.py  mmd_models_tuning.py  regression_model.py
mmd_tst_variable_detector/datasets/: __init__.py  base.py  dataset_generater.py  file_backend_static_dataset.py  file_onetime_load_backend_static_dataset.py  ram_backend_static_dataset.py  ram_flexible_backend_static_dataset.py  sensor_sample_based_dataset.py
mmd_tst_variable_detector/detection_algorithm/: __init__.py  baseline_mmd.py  commons.py  detection_algorithm_one.py  interpretable_mmd_detector.py  pytorch_lightning_trainer.py
mmd_tst_variable_detector/distance_module/: __init__.py  base.py  l2_distance.py  time_aware_distance.py
mmd_tst_variable_detector/interface/: __init__.py  data_objects.py  interface.py  (+4 more)
tests/: check_cv_backend_comparison.py  data_generator.py  test_interpretable_mmd_detector.py
(+113 files in other folders)
