[tool.poetry]
name = "mmd_tst_variable_detector"
version = "1.3"
description = ""
authors = ["Kensuke-Mitsuzawa <kensuke.mit@gmail.com>"]
readme = "README.md"
packages = [
    {include = "mmd_tst_variable_detector"},
]


[tool.poetry.dependencies]
python = "^3.9"

numpy = "^1.24.2"
torch = "2.0.0"
scikit-learn = "*"
pytorch_lightning = "2.1.2"

pot = "*"
joblib = "*"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
dask = "2023.5.0"
distributed = "*"
uniplot = "*"
bokeh = {version = "2.4.2", optional = true}  # need for dask dashboard

mlflow = {version = "^2.7.1"}
grpcio = "1.48.2"
optuna = "^3.4.0"
tinydb = "^4.8.0"
plotly = "^5.18.0"

logzero = "*"
dacite = "^1.8.1"

# package only for experimental
more-itertools = "*"
future = {version = "*", optional = true}
tensorboard = ">2.0.0"
frozendict = "^2.3.9"
trendfilter = "^0.2.1"

xarray = "^2024.1.1"
pandera = "^0.18.3"
toml = "^0.10.2"
fairseq = "^0.12.2"
sentencepiece = "^0.2.0"
umap-learn = {extras = ["plot"], version = "^0.5.7"}
openpyxl = "^3.1.5"
geomloss = "^0.2.6"


[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-resource-path = "^1.3.0"
python-dotenv = "*"
pytest-parallel = "*"
sphinx = "*"
myst-parser = "*"
sphinx_rtd_theme = "*"
papermill = "*"


[tool.poetry.scripts]

[tool.poetry.extras]
dask_visual = ["bokeh"]
experiment_compare = ["future"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
build-backend = "poetry.core.masonry.api"
